# drug-verification-system

./: README.md  app.py  deploy.sh  deployment-output.txt  main.py  pyproject.toml
frontend/: .env  .env.example  README.md  index.html  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
lambda/: Dockerfile  image_processor.py  nafdac_validator_container.py  requirements.txt  verification_workflow.py
stacks/: apigateway_stack.py  dynamodb_stack.py  frontend_stack.py  lambda_stack.py  s3_stack.py
tests/unit/: test_nafdac_stack.py
